--- a/app.json
+++ b/app.json
@@ -1,7 +1,10 @@
 {
   "pages": [
-    "pages/newsList/newsList",
+    "pages/index/index",
+    "pages/bid/index/index",
+
     "pages/video/video",
+    "pages/yuyue/yuyue",
     "pages/progress/progressItem/progressItem",
     "pages/mine/mine",
     "pages/password/forget",
@@ -10,15 +13,11 @@
     "pages/myData/change",
     "pages/register/second",
     "pages/register/register",
-    "pages/index/index",
-    "pages/complaintsMake/complaintsMake",
-    "pages/yuyue/yuyue",
     "pages/myYuYue/list",
     "pages/myYuYue/myYuYue",
     "pages/record/record",
     "pages/shezhi/shezhi",
     "pages/myData/myData",
-    "pages/newsList/newsListInfo",
     "pages/bid/firstStemp/firstStemp",
     "pages/bid/bid",
     "pages/bid/deleteImageBid/deleteImageBid",
@@ -28,8 +27,6 @@
     "pages/logs/logs",
     "pages/storesReserve/storesReserve",
     "pages/pointsRead/pointsRead",
-    "pages/politicalRules/politicalRules",
-    "pages/problemCommon/problemCommon",
     "pages/regulationsManagement/regulationsManagement",
     "pages/implementation/implementation",
     "pages/managementHealth/managementHealth",
@@ -49,38 +46,6 @@
     "navigationBarBackgroundColor": "#1d8aff",
     "navigationBarTitleText": "综合服务平台",
     "navigationBarTextStyle": "white"
-  },
-  "tabBar": {
-    "color": "#b0b0b0",
-    "selectedColor": "#1d8aff",
-    "backgroundColor": "#ffffff",
-    "borderStyle": "black",
-    "list": [
-      {
-        "pagePath": "pages/newsList/newsList",
-        "text": "新闻公告",
-        "iconPath": "static/images/bottom_icon01.png",
-        "selectedIconPath": "static/images/bottom_icon01_active.png"
-      },
-      {
-        "pagePath": "pages/yuyue/yuyue",
-        "text": "办事预约",
-        "iconPath": "static/images/bottom_icon02.png",
-        "selectedIconPath": "static/images/bottom_icon02_active.png"
-      },
-      {
-        "pagePath": "pages/index/index",
-        "text": "网上自助",
-        "iconPath": "static/images/bottom_icon03.png",
-        "selectedIconPath": "static/images/bottom_icon03_active.png"
-      },
-      {
-        "pagePath": "pages/mine/mine",
-        "text": "我的信息",
-        "iconPath": "static/images/bottom_icon04.png",
-        "selectedIconPath": "static/images/bottom_icon04_active.png"
-      }
-    ]
   },
   "sitemapLocation": "sitemap.json"
 }
